--- a/packages/public-client/src/app/components/shared/mouse-facer/mouse-facer.component.html
+++ b/packages/public-client/src/app/components/shared/mouse-facer/mouse-facer.component.html
@@ -8,3 +8,6 @@
   </div>
   <div class="mouse-facer-shadow"></div>
 </div>
+mfsize: {{bgSize}}<br>
+mfurl: {{imgSrc}}<br>
+mfposition: {{bgPosition}}<br>
