--- a/packages/public-client/src/app/components/pages/home/home.component.html
+++ b/packages/public-client/src/app/components/pages/home/home.component.html
@@ -27,12 +27,19 @@
       </div>
     </div>
 
-    <app-mouse-facer-title-card [titleLines]="siteTitleLines" imgUrl="url(assets/images/home/dive-inn-exterior.jpg)"
+    <!-- <app-mouse-facer-title-card [titleLines]="siteTitleLines" imgUrl="url(assets/images/home/dive-inn-exterior.jpg)"
       [height]="'50vw'"
       [bgPosition]="bgPosition"
       [bgSize]="bgSize"
     >
-    </app-mouse-facer-title-card>
+    </app-mouse-facer-title-card> -->
+    <app-moving-background
+      [siteTitleLines]="siteTitleLines"
+      [bgPositions]="bgPositions"
+      [bgSizes]="bgSizes"
+      imgSrc="url(assets/images/home/dive-inn-exterior.jpg)"
+    >      
+    </app-moving-background>
     <a class="westword-award" href="https://www.westword.com/best-of/2022/readers-choice/best-dive-bar-13820484"
       target="_blank">
       <img src="assets/images/westword_best_dive_bar.png" />
