--- a/packages/public-client/src/app/components/pages/home/home.component.html
+++ b/packages/public-client/src/app/components/pages/home/home.component.html
@@ -34,9 +34,8 @@
     >
     </app-mouse-facer-title-card> -->
     <app-moving-background
-      [siteTitleLines]="siteTitleLines"
-      [bgPositions]="bgPositions"
-      [bgSizes]="bgSizes"
+      [textLines]="siteTitleLines"
+      [orientationConfigs]="siteTitleBgConfigs"
       imgSrc="url(assets/images/home/dive-inn-exterior.jpg)"
     >      
     </app-moving-background>
