--- a/packages/public-client/src/app/components/pages/home/home.component.scss
+++ b/packages/public-client/src/app/components/pages/home/home.component.scss
@@ -2,7 +2,6 @@
 @use '../../scss/utility';
 
 $headerColor: utility.$dive-gray-dk3;
-$verticalGap: 0.75rem;
 
 :host {
   display: flex;
@@ -25,222 +24,11 @@ $verticalGap: 0.75rem;
     .page-title-section {
       position: relative;
 
-      .title-callout {
-        z-index: 4; // TODO: why do we need 4 to be above slide-out logo?
-        position: absolute;
-        bottom: 3vw;
-        right: 3vw;
-
-        @include utility.media-breakpoint-gte(md) {
-          left: 50vw;
-          right: unset;
-          transform: translateX(-50%);
-        }
-
-        .title-callout-title {
-          display: none;
-
-          @include utility.media-breakpoint-gte(md) {
-            display: block;
-          }
-
-          position: absolute;
-          left: 11.3vw;
-          margin: 0;
-          padding: 0;
-          text-align: center;
-          transform: rotate(-25deg);
-          font-size: 1.2vw;
-
-          $textColor: utility.$dive-gray-dk2;
-          $textColorLt: utility.$dive-yellow;
-          $animationTime: 5s;
-
-          div {
-            @keyframes attentionBlink {
-              0% {
-                opacity: 1;
-                text-shadow: none;
-                color: $textColor;
-                transform: scale(1) rotate(25deg);
-              }
-
-              2.5% {
-                opacity: 1;
-                text-shadow: 0px 0px 3px $textColorLt;
-                color: $textColorLt;
-                transform: scale(1) rotate(25deg);
-              }
-
-              5% {
-                opacity: 1;
-                text-shadow: none;
-                color: $textColor;
-                transform: scale(1) rotate(25deg);
-              }
-            }
-
-            @keyframes attentionBlink2 {
-              0% {
-                opacity: 0;
-                text-shadow: none;
-                color: $textColor;
-              }
-
-              2.5% {
-                opacity: 1;
-                color: $textColorLt;
-                transform: scale(1);
-                text-shadow: 0px 0px 3px $textColorLt;
-              }
-
-              17.5% {
-                opacity: 1;
-                color: $textColorLt;
-                transform: scale(1);
-                text-shadow: 0px 0px 3px $textColorLt;
-              }
-
-              29% {
-                opacity: 0;
-                text-shadow: none;
-                color: $textColor;
-              }
-
-              30% {
-                opacity: 0;
-                text-shadow: none;
-                color: $textColor;
-              }
-
-              32.5% {
-                opacity: 1;
-                color: $textColorLt;
-                text-shadow: 0px 0px 3px $textColorLt;
-              }
-
-              47.5% {
-                opacity: 1;
-                color: $textColorLt;
-                text-shadow: 0px 0px 3px $textColorLt;
-              }
-
-              54% {
-                opacity: 0;
-                text-shadow: none;
-                color: $textColor;
-              }
-            }
-
-            position: relative;
-            margin: 0;
-            padding: 0;
-            line-height: 0.9;
-            transform: rotate(25deg);
-            color: utility.$dive-gray-dk2;
-            text-shadow: 2px 2px 2px #000;
-            opacity: 1; //0.5;
-            animation: attentionBlink $animationTime linear infinite;
-            animation-delay: calc(var(--animation-order) * 200ms);
-
-            &::before {
-              content: attr(data-content);
-              position: absolute;
-              top: 0;
-              right: 0;
-              bottom: 0;
-              left: 0;
-              color: utility.$dive-gray-dk2;
-              opacity: 0;
-              animation: attentionBlink2 $animationTime linear infinite;
-              animation-delay: 2.2s;
-            }
-          }
-        }
-
-        .title-callout-content {
-          display: flex;
-
-          a {
-            display: block;
-
-            &::after {
-              content: none;
-            }
-
-            opacity: 0.75;
-
-            @include utility.media-breakpoint-gte(md) {
-              opacity: 0.5;
-            }
-
-            transition: opacity 0.2s ease;
-          }
-
-          .takis {
-
-            &:hover,
-            &:active {
-              opacity: 1;
-            }
-
-            h2 {
-              margin: -1vw 0 0;
-            }
-
-            img {
-              width: 18vw;
-
-              @include utility.media-breakpoint-gte(md) {
-                width: 12vw;
-              }
-            }
-          }
-
-          .cluck {
-            position: relative;
-            right: 1vw;
-
-            @include utility.media-breakpoint-gte(md) {
-              right: -0.75vw;
-            }
-
-            &:hover,
-            &:active {
-              opacity: 1;
-            }
-
-            img {
-              width: 12vw;
-
-              @include utility.media-breakpoint-gte(sm) {
-                width: 9vw;
-              }
-            }
-
-            h2 {
-              position: absolute;
-              top: 64%;
-              left: 55%;
-              transform: translate(-50%, -50%);
-              margin: 0;
-              padding: 0;
-              line-height: 1;
-              font-size: 2.75vw;
-
-              @include utility.media-breakpoint-gte(md) {
-                font-size: 1.75vw;
-              }
-
-              font-family: 'Anton',
-              sans-serif;
-              text-align: center;
-              text-shadow: 1px 1px 1px utility.$dive-black;
-            }
-          }
-        }
+      app-food-logos {
+        // position: absolute;        
       }
 
+      // @TODO - move into homepage mouse-facer bg
       .westword-award {
         display: none;
 
@@ -300,7 +88,7 @@ $verticalGap: 0.75rem;
 
     app-contact-section {}
 
-    // end contact-container
+
 
     $separatorSizes: (
       'zero': 10vw,
@@ -438,229 +226,7 @@ $verticalGap: 0.75rem;
     @include utility.media-breakpoint-gte(ws) {
       width: 70vw;
     }
-
-    $w1: 26vw;
-    $w2: 10vw;
-    $w3: 3vw;
-
-    >div {
-      svg {
-        display: block;
-        flex: 0 auto;
-        height: 3rem; //4vw;
-        width: 3rem; //4vw;
-        max-width: 3rem;
-        max-height: 3rem;
-
-        path {
-          fill: utility.$line-colors;
-        }
-      }
-    }
-
-    .sections-separator-top {
-      display: flex;
-      border-bottom: 1px solid utility.$line-colors;
-      margin: 4vw 0 $verticalGap;
-
-      svg {
-        width: 4rem;
-        height: 4rem;
-        max-width: 4rem;
-        max-height: 4rem;
-      }
-
-      .lines {
-        flex: 1;
-        position: relative;
-        margin: 0 0 $verticalGap;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        align-items: flex-end;
-        //border-top: 1px solid utility.$line-colors;
-        border-bottom: 1px solid utility.$line-colors;
-
-        &::after {
-          content: '';
-          position: absolute;
-          right: 0;
-          bottom: -0.125rem;
-          width: 0.25rem;
-          height: 0.25rem;
-          background-color: utility.$line-colors;
-          border-radius: 50%;
-        }
-
-        >div {
-          position: relative;
-          width: 100%;
-          height: $verticalGap + 0.1rem;
-          margin-top: 0;
-          border-bottom: 1px solid utility.$line-colors;
-
-          &::after {
-            content: '';
-            position: absolute;
-            right: 0;
-            bottom: -0.125rem;
-            width: 0.25rem;
-            height: 0.25rem;
-            background-color: utility.$line-colors;
-            border-radius: 50%;
-          }
-
-          &:last-child {
-            margin-bottom: $verticalGap;
-          }
-        }
-
-        &.left {
-          >div {
-            &:nth-of-type(1) {
-              max-width: 12vw;
-            }
-
-            &:nth-of-type(2) {
-              max-width: 20vw;
-              margin-right: 0.75rem;
-
-            }
-
-            &:nth-of-type(3) {
-              max-width: 30vw;
-              margin-right: 0.6rem;
-            }
-          }
-        }
-
-        &.right {
-          align-items: flex-start;
-
-          &::after {
-            left: 0;
-            right: unset;
-          }
-
-          >div {
-            &::after {
-              left: 0;
-              right: unset;
-            }
-
-            &:nth-of-type(1) {
-              max-width: 12vw;
-            }
-
-            &:nth-of-type(2) {
-              max-width: 20vw;
-              margin-left: 0.75rem;
-
-            }
-
-            &:nth-of-type(3) {
-              max-width: 30vw;
-              margin-left: 0.6rem;
-            }
-          }
-        }
-      }
-    }
-
-    .sections-separator-bottom {
-      display: flex;
-      margin: $verticalGap 0 4vw;
-      border-top: 1px solid utility.$line-colors;
-
-      >* {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-        flex: 1;
-      }
-
-      svg {
-        margin-top: 0.25rem;
-      }
-
-      div {
-        div {
-          position: relative;
-          width: 100%;
-          height: $verticalGap + 0.1rem;
-          margin-top: 0;
-          border-bottom: 1px solid utility.$line-colors;
-
-          &::after {
-            content: '';
-            position: absolute;
-            right: 0;
-            bottom: -0.125rem;
-            width: 0.25rem;
-            height: 0.25rem;
-            background-color: utility.$line-colors;
-            border-radius: 50%;
-          }
-
-          &:nth-of-type(1) {
-            margin: 0 0.5rem 0 0;
-            max-width: $w1;
-          }
-
-          &:nth-of-type(2) {
-            margin: 0 1rem 0 0;
-            max-width: $w2;
-          }
-
-          &:nth-of-type(3) {
-            margin: 0 0.5rem 0 0;
-            max-width: $w3;
-          }
-        }
-      }
-
-      > :last-child {
-        align-items: flex-start;
-
-        div {
-          width: 100%;
-
-          &:nth-of-type(1) {
-            margin: 0 0 0 0.5rem;
-            max-width: $w1;
-          }
-
-          &:nth-of-type(2) {
-            margin: 0 0 0 1rem;
-            max-width: $w2;
-          }
-
-          &:nth-of-type(3) {
-            margin: 0 0 0 0.5rem;
-            max-width: $w3;
-          }
-
-          &::after {
-            left: 0;
-          }
-        }
-      }
-    }
-
-    app-topic-section {
-      z-index: 0;
-      position: relative;
-      display: block;
-    }
-
-    .divider {
-      position: relative;
-      margin: $verticalGap auto;
-      border-top: 1px solid utility.$line-colors;
-    }
-  }
-
-  // end sections-container
+  } // end sections-container
 
   .sections-bottom-separator {
     width: map-get($separatorSizes, 'zero') * 0.7;
