--- a/packages/public-client/src/app/components/pages/home/home.component.html
+++ b/packages/public-client/src/app/components/pages/home/home.component.html
@@ -14,11 +14,11 @@
     >
     </app-mouse-facer-title-card> -->
     
-    <!-- <app-moving-background
+    <app-moving-background
       [textLines]="siteTitleLines"
       [orientationConfigs]="siteTitleBgConfigs"
       imgSrc="url(assets/images/home/dive-inn-exterior.jpg)"
-    ></app-moving-background> -->
+    ></app-moving-background>
 
     <a class="westword-award" href="https://www.westword.com/best-of/2022/readers-choice/best-dive-bar-13820484"
       target="_blank">
@@ -96,7 +96,6 @@
 <!-- <app-site-footer [address]="footerAddress[0]" [phone]="footerPhone"></app-site-footer> -->
 
 <!------------------------------------- SVGs ---------------------------------------->
-
 
 <ng-template #AnchorSvg>
   <svg width="100%" height="100%" viewBox="0 0 103 116" version="1.1" xmlns="http://www.w3.org/2000/svg"
