--- a/packages/public-client/src/app/components/shared/moving-background/moving-background.component.scss
+++ b/packages/public-client/src/app/components/shared/moving-background/moving-background.component.scss
@@ -1,3 +1,8 @@
-app-mouse-facer {
-  height: 90vh;
+@use '../../scss/utility';
+
+:host {
+
+  app-mouse-facer {
+    height: var(--height);
+  }
 }
