--- a/packages/public-client/src/app/components/shared/mouse-facer/mouse-facer.component.scss
+++ b/packages/public-client/src/app/components/shared/mouse-facer/mouse-facer.component.scss
@@ -11,7 +11,12 @@
     overflow: hidden;
     perspective: 2000px;    
 
+    min-height: 400px;
+
     .mouse-facer-content {
+
+      min-height: 400px;
+
       height: 100%;
       background-image: var(--imgSrc);
       background-size: var(--bgSize);
