--- a/packages/public-client/src/app/components/shared/moving-background/moving-background.component.html
+++ b/packages/public-client/src/app/components/shared/moving-background/moving-background.component.html
@@ -11,10 +11,10 @@
     >
     </app-mouse-facer-title-card> -->
 </div>
-<div style="border: 5px solid green; position: relative; margin-top: 5rem;">
+<!-- <div style="border: 5px solid green; position: relative; margin-top: 5rem;">
 <div>size: {{bgSize}}</div>
 <div>position: {{bgPosition}}</div>
-</div>
+</div> -->
 
 
 <div style="display: none">
