--- a/packages/public-client/src/app/components/shared/mouse-facer/mouse-facer.component.scss
+++ b/packages/public-client/src/app/components/shared/mouse-facer/mouse-facer.component.scss
@@ -1,5 +1,15 @@
 @use '../../scss/utility';
 
+@mixin coverAbsolute() {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+$textMaxWidth: 30vw;
+
 :host {
   display: block;
 
