--- a/packages/public-client/src/app/components/shared/moving-background/moving-background.component.html
+++ b/packages/public-client/src/app/components/shared/moving-background/moving-background.component.html
@@ -1,15 +1,15 @@
-<div>
+<div class="moving-background-container">
   <app-mouse-facer
     [bgPosition]="bgPosition"
     [bgSize]="bgSize"
     [imgSrc]="imgSrc"
   ></app-mouse-facer>
-      <!-- <app-mouse-facer-title-card [titleLines]="siteTitleLines" imgUrl="url(assets/images/home/dive-inn-exterior.jpg)"
-      [height]="'9vh'"
-      [bgPosition]="bgPosition"
-      [bgSize]="bgSize"
-    >
-    </app-mouse-facer-title-card> -->
+  <div class="title-container">
+    <h1 *ngFor="let line of textLines" 
+      [attr.card-title]="line"
+      class="title"
+    >{{ line }}</h1>
+  </div>
 </div>
 <!-- <div style="border: 5px solid green; position: relative; margin-top: 5rem;">
 <div>size: {{bgSize}}</div>
@@ -34,7 +34,11 @@
 2. Height in landscape at breakpoints
 3. Coords / sizes / positions would all need landscape/portrait
 
-
-
+ 
+      zero    xs    sm    md   xl  
+h     100           200        400
+w     100     200         300     
+text  100           200        400
+etc   ...     ...
 
 </div>
